--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "host": "0.0.0.0",
   "port": 9800,
   "repoFullName": "yorushika/tsuyu_node",
+  "picLibRepoFullName": "yorushika/pic-lib",
   "commandPrefix": [
     ".",
     "-"
