--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-ws": "^4.0.0",
     "level": "^6.0.0",
     "log4js": "^6.1.2",
+    "node-schedule": "^1.3.2",
     "supervisor": "^0.12.0"
   },
   "devDependencies": {
