--- a/config.json
+++ b/config.json
@@ -2,6 +2,9 @@
   "host": "0.0.0.0",
   "port": 9800,
   "ip": "127.0.0.1",
+  "cqhttpapiHost": "",
+  "cqhttpapiPort": 5700,
+  "cqhttpapiAccessToken": "",
   "repoFullName": "yorushika/tsuyu_node",
   "picLibRepoFullName": "yorushika/pic-lib",
   "commandPrefix": [
